syntax = "proto3";

option java_package = "com.taskable.protobufs";
option java_outer_classname = "TemplateProto";

message Template {
  int32 id = 1;
  string name = 2;
  string description = 3;
  bool archived = 4;
}

message GetTemplatesResponse {
  repeated Template templates = 1;
}

message GetTemplateResponse {
  Template template = 1;
}

message CreateTemplateRequest {
  string name = 1;
}

message CreateTemplateResponse {
  int32 id = 1;
}

message UpdateTemplateRequest {
  optional string name = 1;
  optional string description = 2;
  optional bool archived = 3;
}